--- a/build.dependencies.gradle
+++ b/build.dependencies.gradle
@@ -26,6 +26,6 @@ dependencies {
     implementation 'com.fasterxml.jackson.core:jackson-databind:2.15.2'
     implementation 'com.fasterxml.jackson.core:jackson-core:2.15.2'
     implementation 'com.fasterxml.jackson.core:jackson-annotations:2.15.2'
-
+    implementation 'io.github.andersans11:pedrojson-loader:2.1.4-alpha'
 }
 
