--- a/build.gradle
+++ b/build.gradle
@@ -14,8 +14,10 @@ buildscript {
     }
     dependencies {
         // Note for FTC Teams: Do not modify this yourself.
+        // too fucking bad i'm going to anyway
         classpath 'com.android.tools.build:gradle:8.7.0'
         classpath "org.jetbrains.kotlin:kotlin-gradle-plugin:$kotlin_version"
+        classpath "dev.frozenmilk:Load:${load_version}"
     }
 }
 
