--- a/gradle.properties
+++ b/gradle.properties
@@ -10,3 +10,17 @@ android.enableJetifier=false
 org.gradle.jvmargs=-Xmx1024M
 
 android.nonTransitiveRClass=false
+
+pedropathing_version=1.0.9
+dashboard_version=0.4.16
+slothboard_version=0.2.4+0.4.17
+
+nftc_ftc_version=1.0.0
+nftc_hardware_version=1.0.0
+nftc_control_version=1.0.0
+nftc_bindings_version=1.0.1
+
+pedrojson_version=testing-4
+
+sloth_version=0.2.4
+load_version=0.2.4
