--- a/build.dependencies.gradle
+++ b/build.dependencies.gradle
@@ -6,6 +6,8 @@ repositories {
     maven { url = "https://maven.pedropathing.com/" } // Remove if you don't intend to use PedroPathing
     maven { url = "https://maven.brott.dev/" } // Remove if you don't intend to use the FTC Dashboard (required if using PedroPathing)
     maven { url = "https://repo.dairy.foundation/releases" }
+    maven { url = "https://mymaven.bylazar.com/releases" }
+
 }
 
 dependencies {
@@ -19,13 +21,11 @@ dependencies {
     implementation 'org.firstinspires.ftc:Vision:10.1.1'
     implementation 'androidx.appcompat:appcompat:1.2.0'
 
-    //implementation "com.pedropathing:pedro:${pedropathing_version}" // old pedro dep
+    implementation "com.pedropathing:ftc:${pedropathing_version}"
+    implementation "com.pedropathing:telemetry:${pedropathing_tele_version}"
+    implementation "com.bylazar:fullpanels:${panels_version}"
 
-    implementation("com.pedropathing:pedro:${pedropathing_version}") {
-        exclude group: "com.acmerobotics.dashboard"
-    }
-    //implementation "com.acmerobotics.dashboard:dashboard:${dashboard_version}" // commented out because sloth
-    implementation "com.acmerobotics.slothboard:dashboard:${slothboard_version}"
+    //implementation "com.acmerobotics.slothboard:dashboard:${slothboard_version}"
 
     implementation "dev.nextftc:ftc:${nftc_ftc_version}"
     implementation "dev.nextftc:hardware:${nftc_hardware_version}"
@@ -36,7 +36,7 @@ dependencies {
     implementation 'com.fasterxml.jackson.core:jackson-core:2.15.2'
     implementation 'com.fasterxml.jackson.core:jackson-annotations:2.15.2'
     implementation "io.github.andersans11:pedrojson-loader:${pedrojson_version}"
-    implementation "dev.frozenmilk.sinister:Sloth:${sloth_version}"
+    //implementation "dev.frozenmilk.sinister:Sloth:${sloth_version}"
 
 
 }
