--- a/gradle.properties
+++ b/gradle.properties
@@ -10,9 +10,12 @@ android.enableJetifier=false
 org.gradle.jvmargs=-Xmx1024M
 
 android.nonTransitiveRClass=false
+android.javaCompile.suppressSourceTargetDeprecationWarning=true
 
-pedropathing_version=1.0.9
-dashboard_version=0.4.16
+pedropathing_version=2.0.3
+pedropathing_tele_version=1.0.0
+panels_version=1.0.6
+
 slothboard_version=0.2.4+0.4.17
 
 nftc_ftc_version=1.0.0
@@ -20,7 +23,7 @@ nftc_hardware_version=1.0.0
 nftc_control_version=1.0.0
 nftc_bindings_version=1.0.1
 
-pedrojson_version=testing-4
+pedrojson_version=2.2.2-alpha
 
 sloth_version=0.2.4
 load_version=0.2.4
