Revert "update gradle"
This reverts commit 3817c692579474e39255f552e3e0f4682c655447.

--- a/build.dependencies.gradle
+++ b/build.dependencies.gradle
@@ -20,20 +20,22 @@ dependencies {
     implementation 'org.firstinspires.ftc:Vision:11.0.0'
     implementation 'androidx.appcompat:appcompat:1.2.0'
 
-    implementation 'com.fasterxml.jackson.core:jackson-databind:2.15.2'
-    implementation 'com.fasterxml.jackson.core:jackson-core:2.15.2'
-    implementation 'com.fasterxml.jackson.core:jackson-annotations:2.15.2'
+    implementation 'com.pedropathing:ftc:2.0.3'
+    implementation 'com.pedropathing:telemetry:1.0.0'
+    implementation 'com.bylazar:fullpanels:1.0.7'
 
-    implementation "com.pedropathing:ftc:${pedropathing_version}"
-    implementation "com.pedropathing:telemetry:${pedropathing_tele_version}"
-    implementation "io.github.andersans11:pedrojson-loader:${pedrojson_version}"
-
-    implementation "com.bylazar:fullpanels:${panels_version}"
+    //implementation "com.acmerobotics.slothboard:dashboard:${slothboard_version}"
 
     implementation "dev.nextftc:ftc:${nftc_ftc_version}"
     implementation "dev.nextftc:hardware:${nftc_hardware_version}"
     implementation "dev.nextftc:control:${nftc_control_version}"
     implementation "dev.nextftc:bindings:${nftc_bindings_version}"
+
+    implementation 'com.fasterxml.jackson.core:jackson-databind:2.15.2'
+    implementation 'com.fasterxml.jackson.core:jackson-core:2.15.2'
+    implementation 'com.fasterxml.jackson.core:jackson-annotations:2.15.2'
+    implementation "io.github.andersans11:pedrojson-loader:${pedrojson_version}"
+    //implementation "dev.frozenmilk.sinister:Sloth:${sloth_version}"
 
     implementation "com.acmerobotics.dashboard:dashboard:0.5.0"
 }
