--- a/gradle.properties
+++ b/gradle.properties
@@ -14,11 +14,16 @@ android.javaCompile.suppressSourceTargetDeprecationWarning=true
 
 pedropathing_version=2.0.3
 pedropathing_tele_version=1.0.0
-pedrojson_version=2.2.2-alpha
+panels_version=1.0.7
 
-panels_version=1.0.8
+slothboard_version=0.2.4+0.4.17
 
 nftc_ftc_version=1.0.1
 nftc_hardware_version=1.0.1
 nftc_control_version=1.0.0
 nftc_bindings_version=1.0.1
+
+pedrojson_version=2.2.2-alpha
+
+sloth_version=0.2.4
+load_version=0.2.4
